# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2016-11-05 mmichaud <m.michael.michaud@orange.fr>
  * Writable PostGIS driver apply a ST_Multi transformation to geometries
    if it detected that the distant table has a MultiGeometry constraint
  * Add two geometry functions to wrap/unwrap geom into/from multigeometry

2016-11-04 mmichaud <m.michael.michaud@orange.fr>
  * Add two plugins to generate random values in an attribute

2016-11-01 mmichaud <m.michael.michaud@orange.fr>
  * Fix #438 Exception while saving the project before closing application

2016-10-31 Giuseppe Aruta
  * October Sextante sprint code:
    - Added Sextante Data Explorer and Pick Coordinates plugins
    - Better integration between OpenJUMP and Sextante data model
    - Upgraded documentation with a new help dialog style
    - Fix bugs #410 and #427

2016-10-30 ede
  * autowrap Toolbar if the workbench frame gets too small to fit all entries
    in one line

2016-10-30 mmichaud <m.michael.michaud@orange.fr>
  * Statistic tools : clean code, extend capabilities, null handling
  * Fix dialog box in PlanarGraphPlugIn

2016-10-29 mmichaud <m.michael.michaud@orange.fr>
  * Fix editablePlugIn when AttributeTable or InfoFrame are opened
  * JoinTableFromExistingLayerPlugIn can now join on any attribute type

2016-10-26 mmichaud <m.michael.michaud@orange.fr>
  * GeometryFunctions : add Visvalingam-Whyatt simplifier

2016-10-26 mmichaud <m.michael.michaud@orange.fr>
  * SimpleQuery : spatial queries are now very fast (use of spatial indexes)

2016-10-25 mmichaud <m.michael.michaud@orange.fr>
  * Add ViewManager extension (v0.3.4) in OpenJUMP PLUS version

2016-10-23 mmichaud <m.michael.michaud@orange.fr>
  * Upgrade graph extension to java1.7 and jgrapht0.9.2 (OpenJUMP PLUS)