@@ -3,6 +3,10 @@
 # 2. make sure that lines break at 80 chars for constricted display situations
 #<-------------------------------- 80 chars ---------------------------------->#
 
+2016-11-06 mmichaud <m.michael.michaud@orange.fr>
+  * Fix bug #439 MakeValid now uses SymDifference instead of difference to
+    repair overlapping holes (which corresponds what is displayed on screen)
+
 2016-11-05 mmichaud <m.michael.michaud@orange.fr>
   * Writable PostGIS driver apply a ST_Multi transformation to geometries
     if it detected that the distant table has a MultiGeometry constraint
